# Filebackup_Automation

./: .gitignore  LICENSE  README.md  file_backup_classes.py  gui_main.py  json_safestate_generator.py  main.py  main_gui.py  setup.cfg  user_interface.py
cmd/: command_help.py  file_backup_classes.py  main.py
cmd/src/: backup.py  custom_exceptions.py  file_backup.py  file_backup_classes.py  file_type_backup.py  main.py  test_file_backup.py  test_file_backup_classes.py  test_file_type_backup.py
cmd/src/impl/: custom_exceptions.py  file_backup.py  file_type_backup.py  json_safestate_generator.py
cmd/test/: test_file_backup_classes.py
cmd/tests/: test_file_backup.py  test_file_type_backup.py  test_main.py
docs/: documentation_file_backup.tex
docs/PARTS/: architecture.tex  code_overview.tex  manual.tex  requirements.tex  styleguide.tex
docs/STYLE/: deckblatt.sty  packages.sty  settings.sty
gui/: cmd_main.py  command_help.py  file_backup_classes.py  gui_main.py  json_safestate_generator.py  user_interface.py
src/: file_backup.py
src/backup_script/: backup.py  file_backup.py  file_type_backup.py  main.py  tk_file_extention_dialog.py
src/backup_script/backup_strategies/: abstract_backup_strategy.py  file_type_backup_strategy.py  simple_backup_strategy.py
src/backup_script/ui/: hybrid_interface.py  ui.py
tests/: test_file_backup.py  test_file_type_backup.py  test_file_type_backup_strategy.py  test_simple_backup_strategy.py  test_tk_file_extention_dialog.py
