[metadata]
name = file-backup-MAX-WEISE
version = 0.0.1
author = Max Weise
author_email = max.weise@student.reutlingen-university.de
description = This package is designed to help with backing up multiple files and directories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MaxWeise/Filebackup_Automation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
